--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "types": "./lib/cjs/types/index.d.ts",
   "main": "./lib/cjs/index.js",
   "scripts": {
-    "test": "npm pack && npm install ./npm-public-package-test jest",
+    "test": "npm pack && npm install ./npm-public-package-test-*.tgz && jest",
     "clean": "rimraf ./lib",
     "build": "npm run clean && npm run build:esm && npm run build:cjs",
     "build:esm": "tsc -p ./configs/tsconfig.esm.json && mv lib/esm/index.js lib/esm/index.mjs",
@@ -42,8 +42,5 @@
     "ts-node": "^10.9.2",
     "tsc": "^2.0.4",
     "typescript": "^5.3.3"
-  },
-  "dependencies": {
-    "npm-public-package-test": "file:npm-public-package-test-1.0.0.tgz"
   }
 }
