tsc, rimraf global X

--- a/configs/tsconfig.base.json
+++ b/configs/tsconfig.base.json
@@ -11,4 +11,7 @@
       "allowSyntheticDefaultImports": true,
     },
     "files": ["../src/index.ts"],
+    "exclude": [
+      "__test__"
+    ]
   }
