--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "npm-public-package-test",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
   "types": "./lib/cjs/types/index.d.ts",
   "main": "./lib/cjs/index.js",
   "scripts": {
-    "test": "npm pack && npm install ./npm-public-package-test-*.tgz && jest",
-    "clean": "rimraf ./lib",
+    "test": "rimraf ./npm-public-package-test-*.tgz && npm pack && npm install ./npm-public-package-test-*.tgz && jest && npm uninstall npm-public-package-test",
+    "clean": "./node_modules/.bin/rimraf ./lib",
     "build": "npm run clean && npm run build:esm && npm run build:cjs",
-    "build:esm": "tsc -p ./configs/tsconfig.esm.json && mv lib/esm/index.js lib/esm/index.mjs",
-    "build:cjs": "tsc -p ./configs/tsconfig.cjs.json",
+    "build:esm": "./node_modules/.bin/tsc -p ./configs/tsconfig.esm.json && mv lib/esm/index.js lib/esm/index.mjs",
+    "build:cjs": "./node_modules/.bin/tsc -p ./configs/tsconfig.cjs.json",
     "prepack": "npm run build"
   },
   "keywords": [],
@@ -40,7 +40,6 @@
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "tsc": "^2.0.4",
     "typescript": "^5.3.3"
   }
 }
