--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npm-public-package-test",
-  "version": "1.0.2",
+  "version": "0.0.0-development",
   "description": "",
   "types": "./lib/cjs/types/index.d.ts",
   "main": "./lib/cjs/index.js",
@@ -10,7 +10,8 @@
     "build": "npm run clean && npm run build:esm && npm run build:cjs",
     "build:esm": "./node_modules/.bin/tsc -p ./configs/tsconfig.esm.json && mv lib/esm/index.js lib/esm/index.mjs",
     "build:cjs": "./node_modules/.bin/tsc -p ./configs/tsconfig.cjs.json",
-    "prepack": "npm run build"
+    "prepack": "npm run build",
+    "semantic-release": "semantic-release"
   },
   "keywords": [],
   "author": "heesukim",
@@ -38,6 +39,7 @@
     "jest": "^29.7.0",
     "jest-config": "^29.7.0",
     "rimraf": "^5.0.5",
+    "semantic-release": "^23.0.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
