--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "npm-public-package-test",
-  "version": "0.0.0-development",
-  "description": "",
+  "name": "npm-package-test",
+  "version": "1.0.0",
+  "description": "The aim of this project is to enable developers to rapidly and efficiently deploy NPM public packages. This template is designed to allow users to create, manage, and distribute their NPM packages with minimal setup.",
   "types": "./lib/cjs/types/index.d.ts",
   "main": "./lib/cjs/index.js",
   "scripts": {
@@ -10,12 +10,11 @@
     "build": "npm run clean && npm run build:esm && npm run build:cjs",
     "build:esm": "./node_modules/.bin/tsc -p ./configs/tsconfig.esm.json && mv lib/esm/index.js lib/esm/index.mjs",
     "build:cjs": "./node_modules/.bin/tsc -p ./configs/tsconfig.cjs.json",
-    "prepack": "npm run build",
-    "semantic-release": "semantic-release"
+    "prepack": "npm run build"
   },
   "keywords": [],
   "author": "heesukim",
-  "license": "ISC",
+  "license": "MIT",
   "publishConfig": {
     "access": "public"
   },
@@ -39,9 +38,12 @@
     "jest": "^29.7.0",
     "jest-config": "^29.7.0",
     "rimraf": "^5.0.5",
-    "semantic-release": "^23.0.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/HeesuKim0203/npm-package-template.git"
   }
 }
