--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,13 @@ name: Publish NPM Package
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
+    paths-ignore:
+      - 'README.md'  
+  pull_request:
+    branches: [main]
+    paths-ignore:
+      - 'README.md' 
 
 jobs:
   publish:
