--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "npm-public-package": "./dist/index.bundle.js"
   },
   "scripts": {
-    "test:unit" : "jest",
-    "test:pack": "rm -rf ./npm-public-package-*.tgz && npm uninstall npm-public-package && npm pack && npm install ./npm-public-package-*.tgz && ts-node test.ts && node test.js",
+    "test:unit": "jest __test__",
+    "test:pack": "npm run build && rm -rf ./npm-public-package-*.tgz && npm uninstall npm-public-package && npm pack && npm install ./npm-public-package-*.tgz && ts-node ./scripts/test.ts && node ./scripts/test.js",
     "clean": "rm -rf ./lib && rm -rf ./dist",
     "build": "npm run clean && webpack --mode production"
   },
@@ -40,7 +40,6 @@
     "@types/jest": "^29.5.11",
     "jest": "^29.7.0",
     "jest-config": "^29.7.0",
-    "npm-public-package": "file:npm-public-package-1.0.2.tgz",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
