--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/jest": "^29.5.11",
     "jest": "^29.7.0",
     "jest-config": "^29.7.0",
+    "npm-public-package": "file:npm-public-package-1.0.2.tgz",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
