Add test scripts

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "test:unit": "jest __test__",
     "test:pack": "npm run build && rm -rf ./npm-public-package-*.tgz && npm uninstall npm-public-package && npm pack && npm install -D ./npm-public-package-*.tgz && ts-node ./scripts/test.ts && node ./scripts/test.js",
+    "test" : "npm run test:unit && npm run test:pack",
     "clean": "rm -rf ./lib && rm -rf ./dist",
     "build": "npm run clean && webpack --mode production"
   },
